<?xml version="1.0"?>
<package format="2">
    <name>gazebo_planar_move_plugin</name>
    <version>1.0.0</version>
    <description>Planar move of objects in gazebo</description>
    <maintainer email="Jason.Cochrane@boeing.com">Boeing</maintainer>
    <maintainer email="Phillip.Haeusler@boeing.com">Boeing</maintainer>
    <author>Boeing</author>
    <license>Boeing Proprietary</license>

    <buildtool_depend>catkin</buildtool_depend>

    <depend>boost</depend>
    <depend>gazebo</depend>
    <depend>gazebo_ros</depend>
    <depend>roscpp</depend>
    <depend>geometry_msgs</depend>
    <depend>sensor_msgs</depend>
    <depend>nav_msgs</depend>
    <depend>tf2_ros</depend>
    <depend>tf2_geometry_msgs</depend>

    <test_depend>rostest</test_depend>

    <export>
        <gazebo_ros plugin_path="${prefix}/lib" gazebo_media_path="${prefix}"/>
    </export>
</package>
